--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,102 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-size: 3rem;
+    padding: 0;
+    margin: 0;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+    background-color: #F55A5A;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    height: 55px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+header > img {
+    width: 24px;
+    margin-right: 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+header > span {
+    color: white;
+    font-size: 1.3rem;
+}
+
+section {
+    padding: 25px 30px;
+    height: 168px;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid gray ;
+    border-radius: 6px;
+    margin-bottom: 36px;
+}
+
+.image-container {
+    width: 125px;
+    height: 168px;
+    border-radius: 5px;
+    overflow: hidden;
+    flex-shrink: 0;
+    margin-right: 5px;
+}
+.main-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;    
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+
+}
+
+.location-container {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     
+     
+}
+.marker {
+    height: 20px;
+}
+.location-container > span {
+    font-size: 12px;
+    font-weight: 400;
+    margin-left: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.location-container > a {
+    font-size: 12px;
+     margin-left: 10px;
+     color: lightgray;
+}
+
+.text-container > h2 {
+    font-size: 30px;
+ 
+    padding: 0;
+    margin: 8px 0 0 0 ;
+}
+
+.text-container > h4 {
+    font-size: 12px;
+    margin: 14px 0 0 0 ;
+    padding: 0;
+}
+
+.text-container > p {
+    font-size: 12px;
+    margin: 6px 0 0 0 ;
+    padding: 0;
+    overflow: hidden;
 }
